...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Hedeyeti - Home'),
        leading: FutureBuilder<LocalUser>(
          future: _userFuture,
          builder: (context, snapshot) {
            if (snapshot.connectionState == ConnectionState.waiting) {
              return const Padding(
                padding: EdgeInsets.symmetric(horizontal: 11.0),
...
                  subtitle: const Text('Error loading events'),
                  trailing: const Icon(Icons.error, color: Colors.red),
                );
              } else {
                final events = snapshot.data ?? [];
                return ListTile(
                  key: const ValueKey('Friend tile'),
                  onTap: () {
                    Navigator.pushNamed(context, EventListPage.routeName,
                        arguments: {
                          'id': friend.id,
                          'name': friend.name,
                          'events': events,
...
